; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr_work_interval.c_work_interval_notify.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr_work_interval.c_work_interval_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.work_interval_notification = type { i32, i32, i32, i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@WORK_INTERVAL_OPERATION_NOTIFY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @work_interval_notify(%struct.TYPE_3__* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.work_interval_notification, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %17 = getelementptr inbounds %struct.work_interval_notification, %struct.work_interval_notification* %16, i32 0, i32 0
  store i32 0, i32* %17, align 4
  %18 = getelementptr inbounds %struct.work_interval_notification, %struct.work_interval_notification* %16, i32 0, i32 1
  %19 = load i32, i32* %13, align 4
  store i32 %19, i32* %18, align 4
  %20 = getelementptr inbounds %struct.work_interval_notification, %struct.work_interval_notification* %16, i32 0, i32 2
  %21 = load i32, i32* %12, align 4
  store i32 %21, i32* %20, align 4
  %22 = getelementptr inbounds %struct.work_interval_notification, %struct.work_interval_notification* %16, i32 0, i32 3
  %23 = load i32, i32* %11, align 4
  store i32 %23, i32* %22, align 4
  %24 = getelementptr inbounds %struct.work_interval_notification, %struct.work_interval_notification* %16, i32 0, i32 4
  %25 = load i32, i32* %10, align 4
  store i32 %25, i32* %24, align 4
  %26 = getelementptr inbounds %struct.work_interval_notification, %struct.work_interval_notification* %16, i32 0, i32 5
  %27 = load i32, i32* %9, align 4
  store i32 %27, i32* %26, align 4
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %29 = icmp eq %struct.TYPE_3__* %28, null
  br i1 %29, label %30, label %32

30:                                               ; preds = %6
  %31 = load i32, i32* @EINVAL, align 4
  store i32 %31, i32* @errno, align 4
  store i32 -1, i32* %7, align 4
  br label %44

32:                                               ; preds = %6
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = getelementptr inbounds %struct.work_interval_notification, %struct.work_interval_notification* %16, i32 0, i32 0
  store i32 %35, i32* %36, align 4
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  store i32 %39, i32* %15, align 4
  %40 = load i32, i32* @WORK_INTERVAL_OPERATION_NOTIFY, align 4
  %41 = load i32, i32* %15, align 4
  %42 = call i32 @__work_interval_ctl(i32 %40, i32 %41, %struct.work_interval_notification* %16, i32 24)
  store i32 %42, i32* %14, align 4
  %43 = load i32, i32* %14, align 4
  store i32 %43, i32* %7, align 4
  br label %44

44:                                               ; preds = %32, %30
  %45 = load i32, i32* %7, align 4
  ret i32 %45
}

declare dso_local i32 @__work_interval_ctl(i32, i32, %struct.work_interval_notification*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
